<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_downloads"
        android:icon="@drawable/ic_download"
        android:title="@string/menu_downloads"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_history"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_bookmarks"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/menu_bookmarks"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_new_tab"
        android:title="@string/menu_new_tab"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_new_incognito"
        android:title="@string/menu_new_incognito"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_find"
        android:title="@string/menu_find"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_desktop_mode"
        android:title="@string/menu_desktop_mode"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_night_mode"
        android:title="@string/menu_night_mode"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_clear_cache"
        android:title="@string/menu_clear_cache"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_clear_history"
        android:title="@string/menu_clear_history"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:showAsAction="never" />
</menu>
